<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_aim"
        android:icon="@drawable/aim"
        android:title="@string/title_aim" />

    <item
        android:id="@+id/navigation_theory"
        android:icon="@drawable/theory"
        android:title="@string/title_theory" />
    <item
        android:id="@+id/navigation_procedure"
        android:icon="@drawable/proc"
        android:title="@string/title_procedure" />
    <item
        android:id="@+id/navigation_stimulation"
        android:icon="@drawable/encryption"
        android:title="@string/title_stimulation" />

</menu>
