<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    app:srcCompat="@drawable/bulogo"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="233dp"
                    android:layout_height="65dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="THEORY"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="95dp"
                    tools:layout_editor_absoluteY="27dp" />


            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:text="@string/Content2"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="5dp"
                android:text="@string/Content3"
                android:textColor="@color/colorAccent"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading1"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                android:paddingLeft="25dp"
                android:text="@string/plainContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading2"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:paddingLeft="25dp"
                android:text="@string/cipherContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading3"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:paddingLeft="25dp"
                android:text="@string/keyContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="5dp"
                android:text="@string/Content4"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading4"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:paddingLeft="25dp"
                android:text="@string/symmetricContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/example"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="48dp"
                android:text="@string/eg1"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="48dp"
                android:text="@string/eg2"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="48dp"
                android:text="@string/eg3"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                app:srcCompat="@drawable/symmeteric" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading5"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:paddingLeft="25dp"
                android:text="@string/asymmetricContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/example"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:paddingLeft="48dp"
                android:text="@string/eg4"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:paddingLeft="48dp"
                android:text="@string/eg5"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                app:srcCompat="@drawable/asymmeteric" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="5dp"
                android:text="@string/Content5"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:paddingLeft="25dp"
                android:text="@string/rsa1"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:paddingLeft="25dp"
                android:text="@string/rsa2"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/rsa3"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:paddingLeft="48dp"
                android:text="@string/step1"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:paddingLeft="48dp"
                android:text="@string/step2"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="48dp"
                android:text="@string/step3"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="48dp"
                android:text="@string/step4"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:paddingLeft="48dp"
                android:text="@string/step5"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading6"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:paddingLeft="25dp"
                android:text="@string/encryptionContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading7"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:paddingLeft="25dp"
                android:text="@string/decryptionContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="25dp"
                android:text="@string/smallHeading8"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingLeft="25dp"
                android:text="@string/ristrictionContent"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="177dp"
                app:srcCompat="@drawable/rsa" />

            





        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>